--- a/MyEngine/MyEngine/MyEngine.vcxproj.filters
+++ b/MyEngine/MyEngine/MyEngine.vcxproj.filters
@@ -179,6 +179,9 @@
     <Filter Include="Engine\GameObject\Item\Base">
       <UniqueIdentifier>{82afa0a0-bcc8-416a-bc3b-958bda2f0789}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\GameObject\Item\Sword">
+      <UniqueIdentifier>{02622e5b-8de5-4bf3-8369-4f68dc5c415c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h" />
@@ -328,6 +331,12 @@
     </ClInclude>
     <ClInclude Include="Item.h">
       <Filter>Engine\GameObject\Item\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="Sword.h">
+      <Filter>Engine\GameObject\Item\Sword</Filter>
+    </ClInclude>
+    <ClInclude Include="ShortSword.h">
+      <Filter>Engine\GameObject\Item\Sword</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -484,6 +493,12 @@
     </ClCompile>
     <ClCompile Include="Item.cpp">
       <Filter>Engine\GameObject\Item\Base</Filter>
+    </ClCompile>
+    <ClCompile Include="Sword.cpp">
+      <Filter>Engine\GameObject\Item\Sword</Filter>
+    </ClCompile>
+    <ClCompile Include="ShortSword.cpp">
+      <Filter>Engine\GameObject\Item\Sword</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
