--- a/MyEngine/MyEngine/MyEngine.vcxproj.filters
+++ b/MyEngine/MyEngine/MyEngine.vcxproj.filters
@@ -182,6 +182,15 @@
     <Filter Include="Engine\GameObject\Item\Sword">
       <UniqueIdentifier>{02622e5b-8de5-4bf3-8369-4f68dc5c415c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\GameObject\Item\Sword\Base">
+      <UniqueIdentifier>{0af253e0-fbed-49e3-a96e-70d1416a03fb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Item\Sword\ShortSword">
+      <UniqueIdentifier>{1b5e3b02-d6cd-4853-b8dc-614d06daac47}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Item\Sword\GreatSword">
+      <UniqueIdentifier>{9a852402-2aff-4255-a81b-c12f30480202}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h" />
@@ -333,10 +342,13 @@
       <Filter>Engine\GameObject\Item\Base</Filter>
     </ClInclude>
     <ClInclude Include="Sword.h">
-      <Filter>Engine\GameObject\Item\Sword</Filter>
+      <Filter>Engine\GameObject\Item\Sword\Base</Filter>
     </ClInclude>
     <ClInclude Include="ShortSword.h">
-      <Filter>Engine\GameObject\Item\Sword</Filter>
+      <Filter>Engine\GameObject\Item\Sword\ShortSword</Filter>
+    </ClInclude>
+    <ClInclude Include="GreatSword.h">
+      <Filter>Engine\GameObject\Item\Sword\GreatSword</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -495,10 +507,13 @@
       <Filter>Engine\GameObject\Item\Base</Filter>
     </ClCompile>
     <ClCompile Include="Sword.cpp">
-      <Filter>Engine\GameObject\Item\Sword</Filter>
+      <Filter>Engine\GameObject\Item\Sword\Base</Filter>
     </ClCompile>
     <ClCompile Include="ShortSword.cpp">
-      <Filter>Engine\GameObject\Item\Sword</Filter>
+      <Filter>Engine\GameObject\Item\Sword\ShortSword</Filter>
+    </ClCompile>
+    <ClCompile Include="GreatSword.cpp">
+      <Filter>Engine\GameObject\Item\Sword\GreatSword</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
