--- a/MyEngine/MyEngine/MyEngine.vcxproj.filters
+++ b/MyEngine/MyEngine/MyEngine.vcxproj.filters
@@ -113,12 +113,6 @@
     <Filter Include="Engine\GameObject\UI\ToolUI">
       <UniqueIdentifier>{0a938206-63d9-454a-97f5-cf4da0c75f27}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\GameObject\UI\IconUI">
-      <UniqueIdentifier>{161984c0-e603-4200-a4be-69c69f7de4ff}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\GameObject\UI\CheckButtonUI">
-      <UniqueIdentifier>{95519026-1813-4270-a296-22dd5ccd74a5}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Engine\Scene\TownScene">
       <UniqueIdentifier>{6ba9b6c6-54f2-4db8-96d4-776cdbf1e41c}</UniqueIdentifier>
     </Filter>
@@ -170,9 +164,6 @@
     <Filter Include="Engine\GameObject\MapComponent\Foothold">
       <UniqueIdentifier>{db824440-4188-40ed-a669-e1c626c1027e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\GameObject\Inventory">
-      <UniqueIdentifier>{8ad650c5-cc46-4679-ae59-89a62b957794}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Engine\GameObject\Item">
       <UniqueIdentifier>{79f186a7-747d-44c0-8b40-ba3d630a49f3}</UniqueIdentifier>
     </Filter>
@@ -190,6 +181,18 @@
     </Filter>
     <Filter Include="Engine\GameObject\Item\Sword\GreatSword">
       <UniqueIdentifier>{9a852402-2aff-4255-a81b-c12f30480202}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\UI\InventoryUI">
+      <UniqueIdentifier>{8ad650c5-cc46-4679-ae59-89a62b957794}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\UI\ToolUI\IconUI">
+      <UniqueIdentifier>{161984c0-e603-4200-a4be-69c69f7de4ff}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Manager\UIMgr">
+      <UniqueIdentifier>{83afd7ce-8953-4e3c-9d9c-6328e1cae70a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\UI\Base">
+      <UniqueIdentifier>{a39f639c-7312-4bd9-ac22-872f3d62036d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -269,9 +272,6 @@
     <ClInclude Include="CameraMgr.h">
       <Filter>Engine\Manager\CameraMgr</Filter>
     </ClInclude>
-    <ClInclude Include="UI.h">
-      <Filter>Engine\GameObject\UI</Filter>
-    </ClInclude>
     <ClInclude Include="MouseMgr.h">
       <Filter>Engine\Manager\MouseMgr</Filter>
     </ClInclude>
@@ -292,12 +292,6 @@
     </ClInclude>
     <ClInclude Include="ToolUI.h">
       <Filter>Engine\GameObject\UI\ToolUI</Filter>
-    </ClInclude>
-    <ClInclude Include="IconUI.h">
-      <Filter>Engine\GameObject\UI\IconUI</Filter>
-    </ClInclude>
-    <ClInclude Include="CheckButtonUI.h">
-      <Filter>Engine\GameObject\UI\CheckButtonUI</Filter>
     </ClInclude>
     <ClInclude Include="TownScene.h">
       <Filter>Engine\Scene\TownScene</Filter>
@@ -335,8 +329,8 @@
     <ClInclude Include="Wall.h">
       <Filter>Engine\GameObject\MapComponent\Wall</Filter>
     </ClInclude>
-    <ClInclude Include="Inventory.h">
-      <Filter>Engine\GameObject\Inventory</Filter>
+    <ClInclude Include="InventoryUI.h">
+      <Filter>Engine\GameObject\UI\InventoryUI</Filter>
     </ClInclude>
     <ClInclude Include="Item.h">
       <Filter>Engine\GameObject\Item\Base</Filter>
@@ -349,6 +343,15 @@
     </ClInclude>
     <ClInclude Include="GreatSword.h">
       <Filter>Engine\GameObject\Item\Sword\GreatSword</Filter>
+    </ClInclude>
+    <ClInclude Include="IconUI.h">
+      <Filter>Engine\GameObject\UI\ToolUI\IconUI</Filter>
+    </ClInclude>
+    <ClInclude Include="UIMgr.h">
+      <Filter>Engine\Manager\UIMgr</Filter>
+    </ClInclude>
+    <ClInclude Include="UI.h">
+      <Filter>Engine\GameObject\UI\Base</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -434,9 +437,6 @@
     <ClCompile Include="CameraMgr.cpp">
       <Filter>Engine\Manager\CameraMgr</Filter>
     </ClCompile>
-    <ClCompile Include="UI.cpp">
-      <Filter>Engine\GameObject\UI</Filter>
-    </ClCompile>
     <ClCompile Include="MouseMgr.cpp">
       <Filter>Engine\Manager\MouseMgr</Filter>
     </ClCompile>
@@ -457,12 +457,6 @@
     </ClCompile>
     <ClCompile Include="ToolUI.cpp">
       <Filter>Engine\GameObject\UI\ToolUI</Filter>
-    </ClCompile>
-    <ClCompile Include="IconUI.cpp">
-      <Filter>Engine\GameObject\UI\IconUI</Filter>
-    </ClCompile>
-    <ClCompile Include="CheckButtonUI.cpp">
-      <Filter>Engine\GameObject\UI\CheckButtonUI</Filter>
     </ClCompile>
     <ClCompile Include="TownScene.cpp">
       <Filter>Engine\Scene\TownScene</Filter>
@@ -500,8 +494,8 @@
     <ClCompile Include="Wall.cpp">
       <Filter>Engine\GameObject\MapComponent\Wall</Filter>
     </ClCompile>
-    <ClCompile Include="Inventory.cpp">
-      <Filter>Engine\GameObject\Inventory</Filter>
+    <ClCompile Include="InventoryUI.cpp">
+      <Filter>Engine\GameObject\UI\InventoryUI</Filter>
     </ClCompile>
     <ClCompile Include="Item.cpp">
       <Filter>Engine\GameObject\Item\Base</Filter>
@@ -514,6 +508,15 @@
     </ClCompile>
     <ClCompile Include="GreatSword.cpp">
       <Filter>Engine\GameObject\Item\Sword\GreatSword</Filter>
+    </ClCompile>
+    <ClCompile Include="IconUI.cpp">
+      <Filter>Engine\GameObject\UI\ToolUI\IconUI</Filter>
+    </ClCompile>
+    <ClCompile Include="UIMgr.cpp">
+      <Filter>Engine\Manager\UIMgr</Filter>
+    </ClCompile>
+    <ClCompile Include="UI.cpp">
+      <Filter>Engine\GameObject\UI\Base</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
