--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Animator.h" />
     <ClInclude Include="Application.h" />
+    <ClInclude Include="DashEffect.h" />
     <ClInclude Include="Dungeon1Scene.h" />
     <ClInclude Include="GreatSword.h" />
     <ClInclude Include="InfRepeatBg.h" />
@@ -197,6 +198,7 @@
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Animator.cpp" />
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="DashEffect.cpp" />
     <ClCompile Include="Dungeon1Scene.cpp" />
     <ClCompile Include="GreatSword.cpp" />
     <ClCompile Include="InfRepeatBg.cpp" />
