--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Animator.h" />
     <ClInclude Include="Application.h" />
+    <ClInclude Include="BlackSmithNPC.h" />
     <ClInclude Include="CheckButtonUI.h" />
     <ClInclude Include="CollisionComponent.h" />
     <ClInclude Include="DashEffect.h" />
@@ -166,6 +167,7 @@
     <ClInclude Include="JumpState.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="MouseMgr.h" />
+    <ClInclude Include="NPC.h" />
     <ClInclude Include="RigidBody.h" />
     <ClInclude Include="ShortSword.h" />
     <ClInclude Include="State.h" />
@@ -201,6 +203,7 @@
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Animator.cpp" />
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="BlackSmithNPC.cpp" />
     <ClCompile Include="CheckButtonUI.cpp" />
     <ClCompile Include="CollisionComponent.cpp" />
     <ClCompile Include="DashEffect.cpp" />
@@ -224,6 +227,7 @@
     <ClCompile Include="JumpState.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="MouseMgr.cpp" />
+    <ClCompile Include="NPC.cpp" />
     <ClCompile Include="RigidBody.cpp" />
     <ClCompile Include="ShortSword.cpp" />
     <ClCompile Include="State.cpp" />
