--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AI.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Animator.h" />
     <ClInclude Include="Application.h" />
@@ -151,6 +152,7 @@
     <ClInclude Include="EatState.h" />
     <ClInclude Include="EventObject.h" />
     <ClInclude Include="Foothold.h" />
+    <ClInclude Include="GiantSkullWarrior.h" />
     <ClInclude Include="GreatSword.h" />
     <ClInclude Include="InfRepeatBg.h" />
     <ClInclude Include="ButtonUI.h" />
@@ -170,6 +172,12 @@
     <ClInclude Include="JumpState.h" />
     <ClInclude Include="LineCollider.h" />
     <ClInclude Include="Monster.h" />
+    <ClInclude Include="MonsterAttState.h" />
+    <ClInclude Include="MonsterFactory.h" />
+    <ClInclude Include="MonsterIdleState.h" />
+    <ClInclude Include="MonsterPatrolState.h" />
+    <ClInclude Include="MonsterState.h" />
+    <ClInclude Include="MonsterTraceState.h" />
     <ClInclude Include="MouseMgr.h" />
     <ClInclude Include="NPC.h" />
     <ClInclude Include="RigidBody.h" />
@@ -204,6 +212,7 @@
     <ClInclude Include="Wall.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AI.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Animator.cpp" />
     <ClCompile Include="Application.cpp" />
@@ -216,6 +225,7 @@
     <ClCompile Include="EatState.cpp" />
     <ClCompile Include="EventObject.cpp" />
     <ClCompile Include="Foothold.cpp" />
+    <ClCompile Include="GiantSkullWarrior.cpp" />
     <ClCompile Include="GreatSword.cpp" />
     <ClCompile Include="InfRepeatBg.cpp" />
     <ClCompile Include="ButtonUI.cpp" />
@@ -234,6 +244,12 @@
     <ClCompile Include="JumpState.cpp" />
     <ClCompile Include="LineCollider.cpp" />
     <ClCompile Include="Monster.cpp" />
+    <ClCompile Include="MonsterAttState.cpp" />
+    <ClCompile Include="MonsterFactory.cpp" />
+    <ClCompile Include="MonsterIdleState.cpp" />
+    <ClCompile Include="MonsterPatrolState.cpp" />
+    <ClCompile Include="MonsterState.cpp" />
+    <ClCompile Include="MonsterTraceState.cpp" />
     <ClCompile Include="MouseMgr.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="RigidBody.cpp" />
