--- a/MyEngine/MyEngine/MyEngine.vcxproj.filters
+++ b/MyEngine/MyEngine/MyEngine.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="리소스 파일">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="Engine">
       <UniqueIdentifier>{ae2229db-771f-40aa-b91a-dbe66c5a8b7e}</UniqueIdentifier>
     </Filter>
@@ -89,14 +85,8 @@
     <Filter Include="Engine\Manager\CameraMgr">
       <UniqueIdentifier>{5d0662e9-00c9-42e8-b231-1de237fc3d30}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\GameObject\UI">
-      <UniqueIdentifier>{c58ccb67-294d-4fd1-a389-e35e29e4723e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Engine\Manager\MouseMgr">
       <UniqueIdentifier>{56a05229-3efe-4d80-972d-583ca2eba682}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\GameObject\UI\ButtonUI">
-      <UniqueIdentifier>{cda428b9-d93a-449b-8b36-a757ff2249ef}</UniqueIdentifier>
     </Filter>
     <Filter Include="Engine\Scene\ToolScene">
       <UniqueIdentifier>{129b519f-5785-4b32-acd3-b0f7dd63a68a}</UniqueIdentifier>
@@ -106,9 +96,6 @@
     </Filter>
     <Filter Include="Engine\Scene\TitleScene">
       <UniqueIdentifier>{2c2b3fea-15ea-4da7-8a99-b59cc4dbdca0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\GameObject\UI\ToolUI">
-      <UniqueIdentifier>{0a938206-63d9-454a-97f5-cf4da0c75f27}</UniqueIdentifier>
     </Filter>
     <Filter Include="Engine\Scene\TownScene">
       <UniqueIdentifier>{6ba9b6c6-54f2-4db8-96d4-776cdbf1e41c}</UniqueIdentifier>
@@ -173,17 +160,8 @@
     <Filter Include="Engine\GameObject\Item\Sword\GreatSword">
       <UniqueIdentifier>{9a852402-2aff-4255-a81b-c12f30480202}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\GameObject\UI\InventoryUI">
-      <UniqueIdentifier>{8ad650c5-cc46-4679-ae59-89a62b957794}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\GameObject\UI\ToolUI\IconUI">
-      <UniqueIdentifier>{161984c0-e603-4200-a4be-69c69f7de4ff}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Engine\Manager\UIMgr">
       <UniqueIdentifier>{83afd7ce-8953-4e3c-9d9c-6328e1cae70a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\GameObject\UI\Base">
-      <UniqueIdentifier>{a39f639c-7312-4bd9-ac22-872f3d62036d}</UniqueIdentifier>
     </Filter>
     <Filter Include="Engine\GameObject\Effect\DashEffect">
       <UniqueIdentifier>{5aaeff6d-3d68-4c4f-9c4a-19b3fd5ea472}</UniqueIdentifier>
@@ -193,9 +171,6 @@
     </Filter>
     <Filter Include="Engine\GameObject\MapComponent\Tile">
       <UniqueIdentifier>{67f32aaf-c140-4ede-bcf5-00fddb5095bb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\GameObject\UI\ToolUI\CheckButtonUI">
-      <UniqueIdentifier>{50bdd6e4-6396-40e5-8035-bdfc8ad41f0a}</UniqueIdentifier>
     </Filter>
     <Filter Include="Engine\GameObject\MapComponent\Tile\TileCollisionType">
       <UniqueIdentifier>{c5f12499-f12f-4c2c-b35b-56ad73ef32f0}</UniqueIdentifier>
@@ -236,9 +211,63 @@
     <Filter Include="Engine\Component\Collider\LineCollider">
       <UniqueIdentifier>{9f82b84d-8486-409c-8c59-4729c2545e9f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\GameObject\Monster\AI">
+      <UniqueIdentifier>{c3a14c61-1c0f-463a-a326-76a1f8330f9c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\Base">
+      <UniqueIdentifier>{dccac5ad-d1ec-4b82-bbf8-6aebd36a0ebf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\AI\MonsterState">
+      <UniqueIdentifier>{63422dc0-db41-4d41-be39-904f9763ceda}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\AI\MonsterState\Base">
+      <UniqueIdentifier>{0bd9cda3-5987-4f44-bbca-c694d7d3d68d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\AI\MonsterState\MonsterIdleState">
+      <UniqueIdentifier>{66a5a81e-1b9b-4c16-8354-1563850f31ae}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\GiantSkullWarrior">
+      <UniqueIdentifier>{927fa401-5ba2-4573-a647-16b9dc53efca}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\MonsterFactory">
+      <UniqueIdentifier>{13989927-249f-4bc5-b66f-f183b5ca0918}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\AI\MonsterState\MonsterTraceState">
+      <UniqueIdentifier>{d9f41615-713d-4541-bf3a-0dfa23a202f2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\AI\MonsterState\MonsterPatrolState">
+      <UniqueIdentifier>{f73f9d64-e57a-4087-b175-fea555af1911}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource">
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\UI">
+      <UniqueIdentifier>{c58ccb67-294d-4fd1-a389-e35e29e4723e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\UI\ButtonUI">
+      <UniqueIdentifier>{cda428b9-d93a-449b-8b36-a757ff2249ef}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\UI\ToolUI">
+      <UniqueIdentifier>{0a938206-63d9-454a-97f5-cf4da0c75f27}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\UI\ToolUI\IconUI">
+      <UniqueIdentifier>{161984c0-e603-4200-a4be-69c69f7de4ff}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\UI\ToolUI\CheckButtonUI">
+      <UniqueIdentifier>{50bdd6e4-6396-40e5-8035-bdfc8ad41f0a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\UI\InventoryUI">
+      <UniqueIdentifier>{8ad650c5-cc46-4679-ae59-89a62b957794}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\UI\Base">
+      <UniqueIdentifier>{a39f639c-7312-4bd9-ac22-872f3d62036d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\AI\MonsterState\MonsterAttState">
+      <UniqueIdentifier>{b713eeed-faa2-46da-8561-b1d0e341e5de}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Resource.h" />
     <ClInclude Include="pch.h">
       <Filter>Common</Filter>
     </ClInclude>
@@ -305,9 +334,6 @@
     <ClInclude Include="EnumDefine.h">
       <Filter>Common\Lib</Filter>
     </ClInclude>
-    <ClInclude Include="Monster.h">
-      <Filter>Engine\GameObject\Monster</Filter>
-    </ClInclude>
     <ClInclude Include="CollisionMgr.h">
       <Filter>Engine\Manager\CollisionMgr</Filter>
     </ClInclude>
@@ -318,7 +344,7 @@
       <Filter>Engine\Manager\MouseMgr</Filter>
     </ClInclude>
     <ClInclude Include="ButtonUI.h">
-      <Filter>Engine\GameObject\UI\ButtonUI</Filter>
+      <Filter>Engine\GameObject\Monster\UI\ButtonUI</Filter>
     </ClInclude>
     <ClInclude Include="ToolScene.h">
       <Filter>Engine\Scene\ToolScene</Filter>
@@ -330,7 +356,7 @@
       <Filter>Engine\Scene\TitleScene</Filter>
     </ClInclude>
     <ClInclude Include="ToolUI.h">
-      <Filter>Engine\GameObject\UI\ToolUI</Filter>
+      <Filter>Engine\GameObject\Monster\UI\ToolUI</Filter>
     </ClInclude>
     <ClInclude Include="TownScene.h">
       <Filter>Engine\Scene\TownScene</Filter>
@@ -366,7 +392,7 @@
       <Filter>Engine\GameObject\MapComponent\Tile\TileCollisionType\Wall</Filter>
     </ClInclude>
     <ClInclude Include="InventoryUI.h">
-      <Filter>Engine\GameObject\UI\InventoryUI</Filter>
+      <Filter>Engine\GameObject\Monster\UI\InventoryUI</Filter>
     </ClInclude>
     <ClInclude Include="Item.h">
       <Filter>Engine\GameObject\Item\Base</Filter>
@@ -381,13 +407,13 @@
       <Filter>Engine\GameObject\Item\Sword\GreatSword</Filter>
     </ClInclude>
     <ClInclude Include="IconUI.h">
-      <Filter>Engine\GameObject\UI\ToolUI\IconUI</Filter>
+      <Filter>Engine\GameObject\Monster\UI\ToolUI\IconUI</Filter>
     </ClInclude>
     <ClInclude Include="UIMgr.h">
       <Filter>Engine\Manager\UIMgr</Filter>
     </ClInclude>
     <ClInclude Include="UI.h">
-      <Filter>Engine\GameObject\UI\Base</Filter>
+      <Filter>Engine\GameObject\Monster\UI\Base</Filter>
     </ClInclude>
     <ClInclude Include="DashEffect.h">
       <Filter>Engine\GameObject\Effect\DashEffect</Filter>
@@ -396,7 +422,7 @@
       <Filter>Engine\GameObject\Effect\Base</Filter>
     </ClInclude>
     <ClInclude Include="CheckButtonUI.h">
-      <Filter>Engine\GameObject\UI\ToolUI\CheckButtonUI</Filter>
+      <Filter>Engine\GameObject\Monster\UI\ToolUI\CheckButtonUI</Filter>
     </ClInclude>
     <ClInclude Include="Foothold.h">
       <Filter>Engine\GameObject\MapComponent\Tile\TileCollisionType\Foothold</Filter>
@@ -425,18 +451,48 @@
     <ClInclude Include="LineCollider.h">
       <Filter>Engine\Component\Collider\LineCollider</Filter>
     </ClInclude>
+    <ClInclude Include="AI.h">
+      <Filter>Engine\GameObject\Monster\AI</Filter>
+    </ClInclude>
+    <ClInclude Include="Monster.h">
+      <Filter>Engine\GameObject\Monster\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="MonsterState.h">
+      <Filter>Engine\GameObject\Monster\AI\MonsterState\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="MonsterIdleState.h">
+      <Filter>Engine\GameObject\Monster\AI\MonsterState\MonsterIdleState</Filter>
+    </ClInclude>
+    <ClInclude Include="GiantSkullWarrior.h">
+      <Filter>Engine\GameObject\Monster\GiantSkullWarrior</Filter>
+    </ClInclude>
+    <ClInclude Include="MonsterFactory.h">
+      <Filter>Engine\GameObject\Monster\MonsterFactory</Filter>
+    </ClInclude>
+    <ClInclude Include="MonsterTraceState.h">
+      <Filter>Engine\GameObject\Monster\AI\MonsterState\MonsterTraceState</Filter>
+    </ClInclude>
+    <ClInclude Include="MonsterPatrolState.h">
+      <Filter>Engine\GameObject\Monster\AI\MonsterState\MonsterPatrolState</Filter>
+    </ClInclude>
+    <ClInclude Include="Resource.h">
+      <Filter>Resource</Filter>
+    </ClInclude>
+    <ClInclude Include="MonsterAttState.h">
+      <Filter>Engine\GameObject\Monster\AI\MonsterState\MonsterAttState</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MyEngine.rc">
-      <Filter>리소스 파일</Filter>
+      <Filter>Resource</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="small.ico">
-      <Filter>리소스 파일</Filter>
+      <Filter>Resource</Filter>
     </Image>
     <Image Include="MyEngine.ico">
-      <Filter>리소스 파일</Filter>
+      <Filter>Resource</Filter>
     </Image>
   </ItemGroup>
   <ItemGroup>
@@ -500,9 +556,6 @@
     <ClCompile Include="EventRegisteror.cpp">
       <Filter>Common\EventReg</Filter>
     </ClCompile>
-    <ClCompile Include="Monster.cpp">
-      <Filter>Engine\GameObject\Monster</Filter>
-    </ClCompile>
     <ClCompile Include="CollisionMgr.cpp">
       <Filter>Engine\Manager\CollisionMgr</Filter>
     </ClCompile>
@@ -513,7 +566,7 @@
       <Filter>Engine\Manager\MouseMgr</Filter>
     </ClCompile>
     <ClCompile Include="ButtonUI.cpp">
-      <Filter>Engine\GameObject\UI\ButtonUI</Filter>
+      <Filter>Engine\GameObject\Monster\UI\ButtonUI</Filter>
     </ClCompile>
     <ClCompile Include="ToolScene.cpp">
       <Filter>Engine\Scene\ToolScene</Filter>
@@ -525,7 +578,7 @@
       <Filter>Engine\Scene\TitleScene</Filter>
     </ClCompile>
     <ClCompile Include="ToolUI.cpp">
-      <Filter>Engine\GameObject\UI\ToolUI</Filter>
+      <Filter>Engine\GameObject\Monster\UI\ToolUI</Filter>
     </ClCompile>
     <ClCompile Include="TownScene.cpp">
       <Filter>Engine\Scene\TownScene</Filter>
@@ -561,7 +614,7 @@
       <Filter>Engine\GameObject\MapComponent\Tile\TileCollisionType\Wall</Filter>
     </ClCompile>
     <ClCompile Include="InventoryUI.cpp">
-      <Filter>Engine\GameObject\UI\InventoryUI</Filter>
+      <Filter>Engine\GameObject\Monster\UI\InventoryUI</Filter>
     </ClCompile>
     <ClCompile Include="Item.cpp">
       <Filter>Engine\GameObject\Item\Base</Filter>
@@ -576,13 +629,13 @@
       <Filter>Engine\GameObject\Item\Sword\GreatSword</Filter>
     </ClCompile>
     <ClCompile Include="IconUI.cpp">
-      <Filter>Engine\GameObject\UI\ToolUI\IconUI</Filter>
+      <Filter>Engine\GameObject\Monster\UI\ToolUI\IconUI</Filter>
     </ClCompile>
     <ClCompile Include="UIMgr.cpp">
       <Filter>Engine\Manager\UIMgr</Filter>
     </ClCompile>
     <ClCompile Include="UI.cpp">
-      <Filter>Engine\GameObject\UI\Base</Filter>
+      <Filter>Engine\GameObject\Monster\UI\Base</Filter>
     </ClCompile>
     <ClCompile Include="DashEffect.cpp">
       <Filter>Engine\GameObject\Effect\DashEffect</Filter>
@@ -591,7 +644,7 @@
       <Filter>Engine\GameObject\Effect\Base</Filter>
     </ClCompile>
     <ClCompile Include="CheckButtonUI.cpp">
-      <Filter>Engine\GameObject\UI\ToolUI\CheckButtonUI</Filter>
+      <Filter>Engine\GameObject\Monster\UI\ToolUI\CheckButtonUI</Filter>
     </ClCompile>
     <ClCompile Include="Foothold.cpp">
       <Filter>Engine\GameObject\MapComponent\Tile\TileCollisionType\Foothold</Filter>
@@ -619,6 +672,33 @@
     </ClCompile>
     <ClCompile Include="LineCollider.cpp">
       <Filter>Engine\Component\Collider\LineCollider</Filter>
+    </ClCompile>
+    <ClCompile Include="AI.cpp">
+      <Filter>Engine\GameObject\Monster\AI</Filter>
+    </ClCompile>
+    <ClCompile Include="Monster.cpp">
+      <Filter>Engine\GameObject\Monster\Base</Filter>
+    </ClCompile>
+    <ClCompile Include="MonsterState.cpp">
+      <Filter>Engine\GameObject\Monster\AI\MonsterState\Base</Filter>
+    </ClCompile>
+    <ClCompile Include="MonsterIdleState.cpp">
+      <Filter>Engine\GameObject\Monster\AI\MonsterState\MonsterIdleState</Filter>
+    </ClCompile>
+    <ClCompile Include="GiantSkullWarrior.cpp">
+      <Filter>Engine\GameObject\Monster\GiantSkullWarrior</Filter>
+    </ClCompile>
+    <ClCompile Include="MonsterFactory.cpp">
+      <Filter>Engine\GameObject\Monster\MonsterFactory</Filter>
+    </ClCompile>
+    <ClCompile Include="MonsterTraceState.cpp">
+      <Filter>Engine\GameObject\Monster\AI\MonsterState\MonsterTraceState</Filter>
+    </ClCompile>
+    <ClCompile Include="MonsterPatrolState.cpp">
+      <Filter>Engine\GameObject\Monster\AI\MonsterState\MonsterPatrolState</Filter>
+    </ClCompile>
+    <ClCompile Include="MonsterAttState.cpp">
+      <Filter>Engine\GameObject\Monster\AI\MonsterState\MonsterAttState</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
